--- a/src/main/java/com/company/pages/login_page/MessengerFrame.form
+++ b/src/main/java/com/company/pages/login_page/MessengerFrame.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-15000805"/>
+      <nextFocusableComponent value=""/>
     </properties>
     <border type="none"/>
     <children>
