--- a/src/main/java/com/company/pages/main_page/MainPageForm.form
+++ b/src/main/java/com/company/pages/main_page/MainPageForm.form
@@ -21,14 +21,14 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="ce1b9" binding="leftPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ce1b9" binding="leftPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="left"/>
             </constraints>
             <properties>
               <background color="-13882324"/>
-              <maximumSize width="500" height="2147483647"/>
+              <maximumSize width="500" height="-1"/>
               <minimumSize width="300" height="24"/>
               <preferredSize width="350" height="24"/>
             </properties>
@@ -64,17 +64,51 @@
                   </component>
                 </children>
               </grid>
-              <grid id="e26c" binding="chatsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <scrollpane id="7ad6f" binding="chatsScroll">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="300" height="-1"/>
+                    <preferred-size width="350" height="-1"/>
+                    <maximum-size width="500" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-13882324"/>
+                  <horizontalScrollBarPolicy value="31"/>
+                  <verticalScrollBarPolicy value="20"/>
                 </properties>
                 <border type="none"/>
-                <children/>
-              </grid>
+                <children>
+                  <component id="fffdf" class="javax.swing.JList" binding="listOfChats" custom-create="true">
+                    <constraints/>
+                    <properties>
+                      <background color="-13882324"/>
+                      <fixedCellHeight value="75"/>
+                      <font name="Baloo" size="26"/>
+                      <foreground color="-809158"/>
+                      <maximumSize width="500" height="-1"/>
+                      <minimumSize width="300" height="0"/>
+                      <preferredSize width="350" height="0"/>
+                      <selectionBackground color="-809158"/>
+                      <selectionMode value="0"/>
+                    </properties>
+                    <clientProperties>
+                      <List.isFileList class="java.lang.Boolean" value="false"/>
+                    </clientProperties>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="eb064" class="javax.swing.JLabel" binding="chatsLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Baloo" size="28"/>
+                  <foreground color="-6184543"/>
+                  <horizontalAlignment value="0"/>
+                  <text value="Chats"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="5e2f1" binding="rightPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -117,6 +151,7 @@
                       <margin top="2" left="6" bottom="2" right="6"/>
                       <selectionColor color="-809157"/>
                       <selectionStart value="0"/>
+                      <text value=""/>
                     </properties>
                     <clientProperties>
                       <html.disable class="java.lang.Boolean" value="false"/>
