--- a/src/main/java/com/company/pages/main_page/MainPageForm.form
+++ b/src/main/java/com/company/pages/main_page/MainPageForm.form
@@ -64,7 +64,7 @@
                   </component>
                 </children>
               </grid>
-              <scrollpane id="7ad6f" binding="chatsScroll">
+              <scrollpane id="7ad6f" binding="chatsScroll" custom-create="true">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <minimum-size width="300" height="-1"/>
@@ -111,7 +111,7 @@
               </component>
             </children>
           </grid>
-          <grid id="5e2f1" binding="rightPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="5e2f1" binding="rightPanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="right"/>
@@ -122,70 +122,16 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="1d261" binding="textFieldPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="30" bottom="0" right="30"/>
+              <component id="1b946" class="javax.swing.JLabel" binding="noChatsLabel">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="40"/>
-                  </grid>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-15000805"/>
+                  <font name="Baloo" size="22"/>
+                  <foreground color="-14145496"/>
+                  <text value="Choose or create chat"/>
                 </properties>
-                <border type="none"/>
-                <children>
-                  <component id="fb55a" class="javax.swing.JTextField" binding="textField" custom-create="true">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <minimum-size width="100" height="30"/>
-                        <preferred-size width="800" height="25"/>
-                        <maximum-size width="1080" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <background color="-13882324"/>
-                      <caretColor color="-6184543"/>
-                      <columns value="0"/>
-                      <font name="Arial" size="16"/>
-                      <foreground color="-6184543"/>
-                      <margin top="2" left="6" bottom="2" right="6"/>
-                      <selectionColor color="-809157"/>
-                      <selectionStart value="0"/>
-                      <text value=""/>
-                    </properties>
-                    <clientProperties>
-                      <html.disable class="java.lang.Boolean" value="false"/>
-                    </clientProperties>
-                  </component>
-                  <component id="6a214" class="javax.swing.JButton" binding="sendButton">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
-                        <minimum-size width="40" height="-1"/>
-                        <preferred-size width="40" height="40"/>
-                        <maximum-size width="40" height="40"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <background color="-809157"/>
-                      <opaque value="false"/>
-                      <text value=""/>
-                    </properties>
-                  </component>
-                  <vspacer id="abc58">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                        <minimum-size width="-1" height="10"/>
-                        <maximum-size width="-1" height="50"/>
-                      </grid>
-                    </constraints>
-                  </vspacer>
-                </children>
-              </grid>
-              <vspacer id="18988">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
+              </component>
             </children>
           </grid>
         </children>
