--- a/src/main/java/com/company/pages/main_page/Chat.form
+++ b/src/main/java/com/company/pages/main_page/Chat.form
@@ -114,7 +114,7 @@
                       <selectionMode value="0"/>
                     </properties>
                   </component>
-                  <component id="4a933" class="javax.swing.JList" binding="mainListOfYourChat" custom-create="true">
+                  <component id="fa62c" class="javax.swing.JList" binding="mainListOfYourChat" custom-create="true">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="50"/>
@@ -126,7 +126,7 @@
                       <focusable value="false"/>
                       <font name="Baloo" size="22"/>
                       <foreground color="-1"/>
-                      <model/>
+                      <requestFocusEnabled value="false"/>
                       <selectionBackground color="-15000805"/>
                       <selectionMode value="0"/>
                     </properties>
